tests/agl/rejections/type/too_many_positional_args.agl
def f(x: int, y: int) -> int = x + y
f(1, 2, 3)
